--- a/index.css
+++ b/index.css
@@ -18,35 +18,187 @@ header {
     z-index: 2;       
 }
 
-
 .fon1{
     display: grid; justify-self: center;
-    position: absolute; top: 0px;
-    z-index: 0;
+    position: fixed; top: 0px;
+    z-index: -1;
     user-select: none; -webkit-user-drag: none;
     max-width: 1920px;
     width: 1920px;
     opacity: 1;
-
+    
 }
 
 #zagolovok{
+    color: #FFFFFF;
     margin: 35px; margin-left: 60px;
     font-size: 40px; font-family: 'Rimma-Sans';
     letter-spacing: 2px; z-index: 1;
 }
 
 #navig{
+    color: #FFFFFF;
     display: flex; gap: 55px;
     letter-spacing: 1px;
-    text-align: center; position: absolute; right: 3.6%; top: 3%;
+    text-align: center; position: absolute; right: 4%; top: 3%;
     font-size: 30px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     user-select: none; z-index: 1;
 }
 
 #year{
+    color: #FFFFFF;
     position: absolute; top: 270px; margin-left: 70px; 
     letter-spacing: 2px; line-height: 120%;
     font-size: 55px; font-family: 'Unbounded';
     z-index: 1
 }
+/* //////////////////////////////////// */
+
+#content-box1{
+    position: absolute; top: 817px;
+    display: grid; justify-self: center;
+    border: #2B2DB1 3px solid; border-top-left-radius: 62px; border-top-right-radius: 62px;
+    background-color: #FFFFFF;
+    max-width: 1920px;
+    width: 1918px;
+    height: 1920px;
+    z-index: 2;
+}
+
+h1{
+    color: #2B2DB1; 
+    font-size: 40px; font-family: 'Rimma-Sans';
+    text-align: center;
+    margin: 20px; padding-top: 30px;
+}
+.line{
+    width: 513px;
+    height: 0px;
+    border-top: 4px solid #2B2DB1;
+    position: absolute; left: 50%; top: 160px;
+    transform: translateX(-50%);
+}
+.line2{
+    width: 513px;
+    height: 0px;
+    border-top: 4px solid #2B2DB1;
+    position: absolute; left: 50%; top: 1830px;
+    transform: translateX(-50%);
+}
+
+.info{
+    position: absolute; top: 264px; right: 460px;
+    color: #2B2DB1;
+    font-size: 31px; font-family: 'Unbounded';
+    letter-spacing: 1px; line-height: 120%;
+    width: 450px;
+    margin: 20px;
+}
+
+.img1{
+    position: absolute; top: 265px; left: 450px;
+    width: 510px;
+    height: 410px;
+    opacity: 1;
+    border-radius: 15px;
+}
+.img2{
+    position: absolute; top: 1080px; left: 450px;
+    width: 510px;
+    opacity: 1;
+    border-radius: 15px;
+}
+
+.info2{
+    position: absolute;
+    left: 50%; transform: translateX(-50%);
+    color: #2B2DB1;
+    position: relative; top: -255px;
+    font-family: 'Unbounded';
+    font-size: 30px;
+    letter-spacing: 2px;
+    text-align: center;
+    width: 701px;
+}
+
+.future{
+    position: absolute; top: 900px;
+    display: grid; justify-self: center;
+}
+
+.hant{
+    letter-spacing: 1px;
+    margin: 20px;
+    color: #B3B3B3;
+    position: absolute; top: 220px; left: 442px;
+    font-size: 20px; font-family: 'Unbounded';
+}
+.yak{
+    letter-spacing: 1px;
+    margin: 20px;
+    color: #B3B3B3;
+    position: absolute; top: 1033px; left: 442px;
+    font-size: 20px; font-family: 'Unbounded';
+}
+
+.info20{
+    position: absolute; top: 1080px; right: 460px;
+    color: #2B2DB1;
+    font-size: 31px; font-family: 'Unbounded';
+    letter-spacing: 1px; line-height: 130%;
+    width: 450px;
+    margin: 20px;
+}
+.info21{
+    position: absolute; left: 50%; transform: translateX(-60%); top: 1665px;
+    color: #2B2DB1;
+    font-size: 31px; font-family: 'Unbounded';
+    width: 730px;
+    letter-spacing: 2px;
+}
+
+/* ///////////////// */
+
+#fon2{
+    border-top: #2B2DB1 4px solid;
+    display: grid; justify-content: center;
+    position: absolute; bottom: -862px;
+    z-index: -1;
+    user-select: none; -webkit-user-drag: none;
+    max-width: 1920px;
+    width: 1920px;
+    opacity: 1;
+}
+#content-box2{
+    letter-spacing: 1px;
+    position: absolute; top: 3490px;
+    display: grid; justify-self: center;
+    border: #2B2DB1 3px solid; border-top-left-radius: 62px; border-top-right-radius: 62px;
+    background-color: #FFFFFF;
+    max-width: 1920px;
+    width: 1918px;
+    height: 1920px;
+    z-index: 3;
+}
+
+h1.map-start{
+    position: absolute;
+    top: 162px; left: 50%; transform: translateX(-50%);
+    width: 1200px;
+    font-size: 28px; font-family: 'Unbounded';
+}
+
+/* /////////////// */
+
+#map{
+    border: #2B2DB1 3px solid;
+    border-radius: 30px;
+    box-shadow: 3px 3px 2px 4px #5457ee;
+    position: absolute;
+    top: 360px; left: 50%; transform: translateX(-50%);
+    width: 1170px; height: 700px;
+}
+
+
+
+/* //////////////// */
